--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,22 +1,30 @@
 .catalog {
-  display: flex;
-  flex-wrap: wrap;
-
-  max-width: 944px;
-  margin: 0 auto;
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  grid-template-columns: repeat($card-number, $card-width);
+  gap: $gap;
 
   &__card {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 200px;
+    width: $card-width;
     height: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
-    margin-bottom: 48px;
+    margin-bottom: $gap;
   }
 
-  &__card:not(:nth-child(4n)) {
-    margin-right: 48px;
+  @media screen and(min-width: $media-phone) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and( min-width: $media-tablet) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media screen and( min-width: $media-desktop) {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
